2008-02-17  Jim Huang  <jserv.tw@gmail.com>

        * src/core/prefs.c (update_binding): Allow compilation
	when gconf mode is disabled. Closes #515019.

2008-02-14  Jim Huang  <jserv.tw@gmail.com>

	* src/core/display.c, src/core/util.c: fixups to allow
	compilation in non-verbose mode. Closes #515152.
	
2008-02-12  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: Correct help for verbose option name.
	
2008-02-12  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-branch bump to 2.23.0.

2008-02-12  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.21.21.

2008-02-11  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.21.13 release.

2008-02-04  Thomas Thurman  <tthurman@gnome.org>

        * src/core/compositor.c: only use compositor version if
	we have a compositor. Closes #514453.

2008-02-04  Thomas Thurman  <tthurman@gnome.org>

        * configure.in, src/ui/ui.c: remove workaround for a problem
        in GTK 1.3.9(!) which was causing problems. Closes #513737.

2008-01-28  Michael Meeks  <michael.meeks@novell.com>

	* src/core/display.c (meta_display_open),
	* src/core/compositor.c: fetch & use composite
	version, for remote screens that don't match the
	compile system's version.
	(meta_compositor_manage_screen): bin erroneous FIXME.
	(add_win): remove common warning churn for (very)
	transient windows

2008-02-03  Thomas Thurman  <tthurman@gnome.org>

        * tools/patch-wrangler.py: another program I use for maintenance
	which other people might find useful and which should probably
	be in svn. Also not very polished.

2008-02-03  Thomas Thurman  <tthurman@gnome.org>

        * test/tokentest/tokentest.c, test/tokentest/tokentest.ini: added
	new files for a regression test on the tokeniser. (They aren't very
	polished at the moment and aren't included in the autotools build.)

2008-02-03  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.21.13.
